# secpipw

./: .gitignore  LICENSE  README.md  README.zh-CN.md  benchmark.json  manager-benchmark.json  package-lock.json  package.json  pyproject.toml  vite.config.mjs
.github/workflows/: benchmark.yml  test.yml  vercel.yml
doc/: index.html  main.js  styles.css
doc/docs/: benchmark.html  checks.html  index.html  package-managers.html  parameters.html
doc/public/: parameters.html
doc/public/zh-cn/: parameters.html
doc/zh-cn/: index.html
doc/zh-cn/docs/: benchmark.html  checks.html  index.html  package-managers.html  parameters.html
scripts/: benchmark_install.py  benchmark_package_managers.py  benchmark_viztracer.py  sync_doc_version.py
src/scripts/: benchmark_install.ps1  benchmark_install.py
src/secpipw/: __init__.py  __main__.py  cache_refresh.py  cli.py  install_checks.py  install_plan.py  package_install.py  pip_args.py  pip_bridge.py  pip_guard.py  pth_monitor.py  pypi_api.py  release_checks.py  terminal.py  tool_bridge.py  typo.py  warning_gate.py
src/secured_pip/: __init__.py  __main__.py  cache_refresh.py  cli.py  install_checks.py  install_plan.py  package_install.py  pip_bridge.py  pip_guard.py  pth_monitor.py  pypi_api.py  release_checks.py  terminal.py  typo.py  warning_gate.py
src/secured_pip/data/: pypi-project-names.json
src/spip/: __init__.py  __main__.py  cache_refresh.py  cli.py  install_plan.py  package_install.py  pip_bridge.py  pth_monitor.py  pypi_api.py  release_checks.py  severity.py  terminal.py  typo.py  warning_gate.py
src/spip/data/: disposable-email-domains-strict-LICENSE.txt  disposable-email-domains-strict-SOURCE.txt  disposable-email-domains.json
tests/: test_install_checks.py  test_install_plan.py  test_package_install.py  test_pip_bridge.py  test_pip_guard.py  test_pth_monitor.py  test_pypi_api.py  test_release_checks.py  test_severity.py  test_tool_bridge.py  test_typo.py  test_warning_gate.py
