[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
license = "MIT"
name = "secured_pip"
version = "0.4.2"
description = "A defensive pip wrapper with supply-chain preflight checks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
authors = [
  { name = "Weilin Du (LamentXU)" }
]
dependencies = [
  "packaging==24.2",
  "python-Levenshtein==0.27.3"
]

[project.scripts]
spip = "secured_pip.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secured_pip = ["data/*.json", "data/*.txt"]
